# knowledge-base-app

./: Cargo.toml  README.md  index.html  main.js  package.json
src/: app.rs  db.rs  error.rs  lib.rs  main.rs  object.rs  object_type.rs  schema.rs  tag.rs
src/db/: generic_object.rs  mod.rs  table_id.rs
src/graphql/: mod.rs
