[package]
name = "knowledge-base-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
axum = "0.7.5"
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
signal-hook = "0.3.17"
surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.39.2", features = ["signal", "rt-multi-thread", "macros", "sync"] }
